@@ -94,6 +94,13 @@ JVM.
     <td valign="top">Name of a file to write the output to.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">newenvironment</td>
+    <td valign="top">Do not propagate old environment when new
+      environment variables are specified. Default is &quot;false&quot;
+      (ignored if fork is disabled).</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>arg and jvmarg</h4>
@@ -111,6 +118,14 @@ variables</a>.</p>
 <p><code>Java</code>'s <i>classpath</i> attribute is a <a
 href="../using.html#path">PATH like structure</a> and can also be set via a nested
 <i>classpath</i> element.</p>
+<h4>env</h4>
+<p>It is possible to specify environment variables to pass to the
+forked VM via nested <i>env</i> elements. See the description in the
+section about <a href="exec.html#env">exec</a></p>
+<p>Please note that the environment of the current Ant process is
+<b>not</b> passed to the forked VM if you specify variables using
+<i>env</i>.</p>
+<p>Settings will be ignored if fork is disabled.</p>
 <h3>Examples</h3>
 <pre>  
        &lt;java classname=&quot;test.Main&quot; &gt;
@@ -150,7 +165,7 @@ and with a maximum memory of 128MB. Any non zero return code breaks the build.
 JVM, as it takes different parameters for other JVMs,
 That JVM can be started from &lt;exec&gt; if required.
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
